made carousel smaller

--- a/index.html
+++ b/index.html
@@ -165,36 +165,36 @@
           </div>
   <div>
     <h1 id="portfolio" class="py-5 my-5"><b>Projects</b></h1>
-    <div id="carouselExampleControls" class="carousel slide col-10 mx-auto" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide col-8 mx-auto" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req" style="height:800px;">
+          <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req" style="height:500px;">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank" style="color:white"><h2><strong>Parks_n_Req</strong></h2></a>
-            <p>This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.</p>
+            <!-- <p>This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.</p> -->
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/inBloom.png" alt="inBloom" style="height:800px;">
+          <img class="w-100" src="assets/Media/inBloom.png" alt="inBloom" style="height:500px;">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://in-bloom.herokuapp.com/" target="_blank"><h3 style="color:black"><strong>inBloom</strong></h3></a>
-            <p style="color:black">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
+            <!-- <p style="color:black">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p> -->
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/code-quiz.png" alt="Code Quiz" style="height:800px;">
+          <img class="w-100" src="assets/Media/code-quiz.png" alt="Code Quiz" style="height:500px;">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://ashlinhanson.github.io/codeQuiz/" target="_blank"><h3 style="color:white"><strong>Code Quiz</strong></h3></a>
-            <p>This web application is a quiz designed to test the user on
-              their knowledge of JavaScript.</p>
+            <!-- <p>This web application is a quiz designed to test the user on
+              their knowledge of JavaScript.</p> -->
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/weekday.png" alt="Weekly Planner" style="height:800px;">
+          <img class="w-100" src="assets/Media/weekday.png" alt="Weekly Planner" style="height:500px;">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://ashlinhanson.github.io/dayPlanner/" target="_blank"><h3 style="color:black"><strong>Week Day Planner</strong></h3></a>
-            <p style="color:black">This web application is designed to help the user organize
-              their workday by the hour.</p>
+            <!-- <p style="color:black">This web application is designed to help the user organize
+              their workday by the hour.</p> -->
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -210,7 +210,7 @@
 </div>
   <div id="contact" class="py-5 m-5 mx-auto">
         <div>
-          <h1>Lets Connect! </h1>
+          <h1><strong>Lets Connect!</strong></h1>
           <img src="assets/Media/me.jpeg" alt="profile" id="profileImg" class="mx-auto"/>
           <br/>
           <br/>
