--- a/index.html
+++ b/index.html
@@ -17,25 +17,11 @@
   </head>
 
   <body>
-    <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-      <!--dropdown menu for navbar-->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!--navbar links-->
-      <div class="collapse navbar-collapse py-2 justify-content-end" id="navbarSupportedContent">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item">
-            <a class="nav-link" href="#contact" style="font-size: 32px; color:black;">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav> 
     <div id="vantajs">
       <div>
       <p class="px-5" id="openingHead"><b>I'm Ashli Hanson</b></p>
       <p class="px-5" id="openingText">and I love creating things.</p>
+      <p><a class="px-5" href="#contact" style="font-size: 24px; color:black;">Let's connect</a></p>
       <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram pl-5"></a>
       <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin pl-5"></a>
       <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github pl-5"></a>
