--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </div>
   <div id="contact" class="py-5 m-5 mx-auto">
         <div>
-          <h1><strong>Lets Connect!</strong></h1>
+          <h1><strong>Contact</strong></h1>
           <img src="assets/Media/me.jpeg" alt="profile" id="profileImg" class="mx-auto"/>
           <br/>
           <br/>
