--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
         <div class="text-center col-12 py-5" id="skills">
-          <h1><b>Skills</b></h1>
+          <h1 class="my-5"><b>Skills</b></h1>
           <div class="row py-3">
             <div class="col-3">
               <i class="devicon-html5-plain"
@@ -68,12 +68,12 @@
               ></i>
               <p>jQuery</p>
             </div>
-          <div class="col-3">
+            <div class="col-3">
               <i class="devicon-nodejs-plain"
                 style="font-size:70px;"
               ></i>
               <p>Node.js</p>
-          </div>
+            </div>
             <div class="col-3">
               <i class="devicon-express-original"
                 style="font-size:70px;"
@@ -87,53 +87,52 @@
               <p>Github</p>
             </div>
           </div>
-            <div class="row py-3">
-            
-              <div class="col-3">
-                <i class="devicon-mysql-plain"
-                  style="font-size:70px;"
-                ></i>
-                <p>MySQL</p>
-              </div>
-              <div class="col-3">
-                <i class="devicon-mongodb-plain"
-                  style="font-size:70px;"
-                ></i>
+          <div class="row py-3">
+            <div class="col-3">
+              <i class="devicon-mysql-plain"
+                style="font-size:70px;"
+              ></i>
+              <p>MySQL</p>
+            </div>
+            <div class="col-3">
+              <i class="devicon-mongodb-plain"
+                style="font-size:70px;"
+              ></i>
               <p>Mongo DB</p>
-              </div>
-              <div class="col-3">
-                <i class="devicon-sequelize-plain"
-                  style="font-size:70px;"
-                ></i>
-                <p>Sequelize</p>
-              </div>
-              <div class="col-3">
-                <i class="devicon-bootstrap-plain"
-                  style="font-size:70px;"
-                ></i>
-                <p>Bootstrap</p>
-              </div>
+            </div>
+            <div class="col-3">
+              <i class="devicon-sequelize-plain"
+                style="font-size:70px;"
+              ></i>
+              <p>Sequelize</p>
+            </div>
+            <div class="col-3">
+              <i class="devicon-bootstrap-plain"
+                style="font-size:70px;"
+              ></i>
+              <p>Bootstrap</p>
+            </div>
           </div>
   <div>
     <h1 id="portfolio" class="py-5 my-5"><b>Projects</b></h1>
     <div id="carouselExampleControls" class="carousel slide col-8 mx-auto" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req" style="height:500px;">
+          <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank" style="color:white"><h2><strong>Parks_n_Req</strong></h2></a>
             <!-- <p>This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.</p> -->
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/inBloom.png" alt="inBloom" style="height:500px;">
+          <img class="w-100" src="assets/Media/inBloom.png" alt="inBloom">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://in-bloom.herokuapp.com/" target="_blank"><h3 style="color:black"><strong>inBloom</strong></h3></a>
             <!-- <p style="color:black">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p> -->
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/code-quiz.png" alt="Code Quiz" style="height:500px;">
+          <img class="w-100" src="assets/Media/code-quiz.png" alt="Code Quiz">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://ashlinhanson.github.io/codeQuiz/" target="_blank"><h3 style="color:white"><strong>Code Quiz</strong></h3></a>
             <!-- <p>This web application is a quiz designed to test the user on
@@ -141,7 +140,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/weekday.png" alt="Weekly Planner" style="height:500px;">
+          <img class="w-100" src="assets/Media/weekday.png" alt="Weekly Planner">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://ashlinhanson.github.io/dayPlanner/" target="_blank"><h3 style="color:black"><strong>Week Day Planner</strong></h3></a>
             <!-- <p style="color:black">This web application is designed to help the user organize
@@ -161,7 +160,7 @@
 </div>
   <div id="contact" class="py-5 m-5 mx-auto">
         <div>
-          <h1><strong>Contact</strong></h1>
+          <h1 class="my-5"><strong>Contact</strong></h1>
           <img src="assets/Media/me.jpeg" alt="profile" id="profileImg" class="mx-auto"/>
           <br/>
           <br/>
