--- a/index.html
+++ b/index.html
@@ -120,31 +120,39 @@
         <div class="carousel-item active">
           <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req">
           <div class="carousel-caption d-none d-md-block">
-            <a href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank" style="color:white"><h2><strong>Parks_n_Req</strong></h2></a>
-            <!-- <p>This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.</p> -->
+            <a href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank" style="color:black"><h2><strong>Parks_n_Req</strong></h2></a>
+            <p style="color:black">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.</p>
+            <button href="#" target="_blank">View the Code</button>
+            <button href="#" target="_blank">Check it out</button>
           </div>
         </div>
         <div class="carousel-item">
           <img class="w-100" src="assets/Media/inBloom.png" alt="inBloom">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://in-bloom.herokuapp.com/" target="_blank"><h3 style="color:black"><strong>inBloom</strong></h3></a>
-            <!-- <p style="color:black">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p> -->
+            <p style="color:black">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
+            <button href="#" target="_blank">View the Code</button>
+            <button href="#" target="_blank">Check it out</button>
           </div>
         </div>
         <div class="carousel-item">
           <img class="w-100" src="assets/Media/code-quiz.png" alt="Code Quiz">
           <div class="carousel-caption d-none d-md-block">
-            <a href="https://ashlinhanson.github.io/codeQuiz/" target="_blank"><h3 style="color:white"><strong>Code Quiz</strong></h3></a>
-            <!-- <p>This web application is a quiz designed to test the user on
-              their knowledge of JavaScript.</p> -->
+            <a href="https://ashlinhanson.github.io/codeQuiz/" target="_blank"><h3 style="color:black"><strong>Code Quiz</strong></h3></a>
+            <p style="color:black">This web application is a quiz designed to test the user on
+              their knowledge of JavaScript.</p>
+              <button href="#" target="_blank">View the Code</button>
+              <button href="#" target="_blank">Check it out</button>
           </div>
         </div>
         <div class="carousel-item">
           <img class="w-100" src="assets/Media/weekday.png" alt="Weekly Planner">
           <div class="carousel-caption d-none d-md-block">
             <a href="https://ashlinhanson.github.io/dayPlanner/" target="_blank"><h3 style="color:black"><strong>Week Day Planner</strong></h3></a>
-            <!-- <p style="color:black">This web application is designed to help the user organize
-              their workday by the hour.</p> -->
+            <p style="color:black">This web application is designed to help the user organize
+              their workday by the hour.</p>
+            <button href="#" target="_blank">View the Code</button>
+            <button href="#" target="_blank">Check it out</button>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
