--- a/index.html
+++ b/index.html
@@ -172,8 +172,13 @@
           <img src="assets/Media/me.jpeg" alt="profile" id="profileImg" class="mx-auto"/>
           <br/>
           <br/>
-          <p id="contactP">
-            I love hearing from potential employers, collaborators and new people! 
+          <p id="contactP" class="col-8 mx-auto">
+            Front end web developer with a passion for creativity, problem solving, and growth. 
+            Thrives within a team environment and enjoys collaborating to deliver the highest quality product possible. 
+            Past experience focuses on extensive customer service skills and strong leadership abilities. 
+            These experiences produced many strengths such as creative and quick problem solving, strong communication, effective multitasking abilities, and leadership skills.
+            <br><br>
+            <strong><h4>I love hearing from potential employers, collaborators and new people! </h4></strong>
             <!--Contact list-->
             <div class="list">
             <ul>
