changed bio/contact style

--- a/index.html
+++ b/index.html
@@ -172,12 +172,13 @@
           <img src="assets/Media/me.jpeg" alt="profile" id="profileImg" class="mx-auto"/>
           <br/>
           <br/>
-          <p id="contactP" class="col-8 mx-auto">
-            Front end web developer with a passion for creativity, problem solving, and growth. 
+          <div id="contactP" class="col-8 mx-auto">
+            <p style="font-size: 20px;">Front end web developer with a passion for creativity, problem solving, and growth. 
             Thrives within a team environment and enjoys collaborating to deliver the highest quality product possible. 
             Past experience focuses on extensive customer service skills and strong leadership abilities. 
             These experiences produced many strengths such as creative and quick problem solving, strong communication, effective multitasking abilities, and leadership skills.
-            <br><br>
+            </p>
+            <br>
             <strong><h4>I love hearing from potential employers, collaborators and new people! </h4></strong>
             <!--Contact list-->
             <div class="list">
@@ -194,7 +195,7 @@
               <li class="listItems"><a href="assets/Media/devresumeforreal.pdf" class="links" target="_blank" style="color: black;">Resume</a></li>
             </ul>
             </div>
-          </p>
+          </div>
         </div>
   </div>
     <div id="vantajs">
