--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.8.2/devicon.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/CSS/style.css" />
   </head>
@@ -22,9 +22,9 @@
       <p class="px-5" id="openingHead"><b>I'm Ashli Hanson</b></p>
       <p class="px-5" id="openingText">and I love creating things.</p>
       <p><a class="px-5" href="#contact" style="font-size: 24px; color:black;">Let's connect</a></p>
-      <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram pl-5"></a>
-      <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin pl-5"></a>
-      <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github pl-5"></a>
+      <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fab fa-instagram icon pl-5"></a>
+      <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fab fa-linkedin icon pl-5"></a>
+      <a href="https://github.com/ashlinhanson" target="_blank" class="fab fa-github icon pl-5"></a>
       <div class="container">
         <a data-scroll href="#full">
           <div class="arrow"></div>
@@ -119,7 +119,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h3 style="color: black"><strong>Parks_n_Req</strong></h3>
             <p style="color:black">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected Page.</p>
             <button class="btn" href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank">View the Code</button>
@@ -128,7 +128,7 @@
         </div>
         <div class="carousel-item">
           <img class="w-100" src="assets/Media/inBloom.png" alt="inBloom">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h3 style="color:black"><strong>inBloom</strong></h3>
             <p style="color:black">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
             <button class="btn" href="https://github.com/ashlinhanson/inBloom" target="_blank">View the Code</button>
@@ -137,7 +137,7 @@
         </div>
         <div class="carousel-item">
           <img class="w-100" src="assets/Media/code-quiz.png" alt="Code Quiz">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h3 style="color:black"><strong>Code Quiz</strong></h3>
             <p style="color:black">This web application is a quiz designed to test the user on
               their knowledge of JavaScript.</p>
@@ -147,7 +147,7 @@
         </div>
         <div class="carousel-item">
           <img class="w-100" src="assets/Media/weekday.png" alt="Weekly Planner">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h3 style="color:black"><strong>Week Day Planner</strong></h3>
             <p style="color:black">This web application is designed to help the user organize
               their workday by the hour.</p>
@@ -181,20 +181,26 @@
             <br>
             <strong><h4>I love hearing from potential employers, collaborators and new people! </h4></strong>
             <!--Contact list-->
-            <div class="list">
-            <ul>
-              <br>
-              <li class="listItems">Email : <a href="mailto:ashlinhanson@gmail.com" class="links" style="color:black;">ashlinhanson@gmail.com</a></li>
-              <br>
-              <li class="listItems">Phone : (512)704-5368</li>
-              <br>
-              <li class="listItems"><a href="https://www.linkedin.com/in/ashlihanson/" class="links" target="_blank" style="color:black">LinkedIn</a></li>
-              <br>
-              <li class="listItems"><a href="https://github.com/ashlinhanson" class="links" target="_blank" style="color: black;">GitHub</a></li>
-              <br>
-              <li class="listItems"><a href="assets/Media/devresumeforreal.pdf" class="links" target="_blank" style="color: black;">Resume</a></li>
-            </ul>
+            <div class="row text-center mt-5">
+              <div class="col-md-6 mb-5">
+                <p>Phone : <br>(512) 704-5368</p>
+              </div>
+              <div class="col-md-6 mb-5">
+                <a style="color:black" href="mailto:ashlinhanson@gmail.com" id="contactIcons"></a>
+                  <p>Email:<br> <a style="color:black" href="mailto:ashlinhanson@gmail.com">ashlinhanson@gmail.com</a></p>
+              </div>
+          </div>
+          <div class="row text-center">
+              <div class="col-md-4 mb-5">
+                <a class="fab fa-github icon" href="https://github.com/ashlinhanson" target="_blank" id="contactIcons"></a>
+              </div>
+              <div class="col-md-4 mb-5">
+                <a class="fa fa-file icon" style="color: black;" href="assets/Media/devresumeforreal.pdf" target="_blank" id="contactIcons"></a>
+                <p>Resume</p>
             </div>
+              <div class="col-md-4 mb-5">
+                <a class="fab fa-linkedin icon" href="https://www.linkedin.com/in/ashlihanson/" target="_blank" id="contactIcons"></a>
+              </di>
           </div>
         </div>
   </div>
