--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
           <br/>
           <br/>
           <div id="contactP" class="col-8 mx-auto">
-            <p style="font-size: 20px;">Front end web developer with a passion for creativity, problem solving, and growth. 
-            Thrives within a team environment and enjoys collaborating to deliver the highest quality product possible. 
-            Past experience focuses on extensive customer service skills and strong leadership abilities. 
+            <p style="font-size: 20px;">I am a Front end web developer with a passion for creativity, problem solving, and growth. 
+            I Thrive within a team environment and enjoy collaborating to deliver the highest quality product possible. 
+            My past experience focuses on extensive customer service skills and strong leadership abilities. 
             These experiences produced many strengths such as creative and quick problem solving, strong communication, effective multitasking abilities, and leadership skills.
             </p>
             <br>
