fixed mobile portfolio display to cards instead of carousel

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
           </div>
   <div>
     <h1 id="portfolio" class="py-5 my-5"><b>Projects</b></h1>
-    <div id="carouselExampleControls" class="carousel slide col-8 mx-auto" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide col-8 mx-auto d-none d-sm-block" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req">
           <div class="carousel-caption d-md-block">
             <h3 style="color: black"><strong>Parks_n_Req</strong></h3>
-            <p style="color:black">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected Page.</p>
+            <p style="color:black">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected park.</p>
             <button class="btn" href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank">View the Code</button>
             <button class="btn" href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank">View the Page</button>
           </div>
@@ -165,6 +165,48 @@
       </a>
     </div>
   </div>
+  <div class="d-block d-sm-none container" id="indexCont">
+    <div class="row" id="portfolioCards">
+      <div class="card m-2 p-2">
+        <img src="assets/Media/parks_n_req.png" class="card-img-top" alt="Parks_n_Req" style="height: 150px; width: 250px;">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Parks_n_Req</strong></h5>
+          <p class="card-text">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected park.</p>
+          <button class="btn" href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank">View the Page</button>
+          <button class="btn" href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank">View the Code</button>
+        </div>
+      </div>
+      <div class="card m-2 p-2">
+        <img src="assets/Media/inBloom.png" class="card-img-top" alt="inBloom" style="height: 150px; width: 250px;">
+        <div class="card-body">
+          <h5 class="card-title"><strong>inBloom</strong></h5>
+          <p class="card-text">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
+          <button class="btn" href="https://in-bloom.herokuapp.com/" target="_blank">View the Page</button>
+          <button class="btn" href="https://github.com/ashlinhanson/inBloom" target="_blank">View the Code</button>
+        </div>
+      </div>
+      <div class="card m-2 p-2">
+        <img src="assets/Media/code-quiz.png" class="card-img-top" alt="Code Quiz" style="height: 150px; width: 250px;">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Code Quiz</strong></h5>
+          <p class="card-text">This web application is a quiz designed to test the user on
+            their knowledge of JavaScript.</p>
+          <button class="btn" href="https://ashlinhanson.github.io/codeQuiz/" target="_blank">View the Page</button>
+          <button class="btn" href="https://github.com/ashlinhanson/codeQuiz" target="_blank">View the Code</button>
+        </div>
+      </div>
+      <div class="card m-2 p-2">
+        <img src="assets/Media/weekday.png" class="card-img-top" alt="Day Planner" style="height: 150px; width: 250px;">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Day Planner</strong></h5>
+          <p class="card-text">This web application is designed to help the user organize
+            their workday by the hour.</p>
+          <button class="btn" href="https://ashlinhanson.github.io/dayPlanner/" target="_blank">View the Page</button>
+          <button class="btn" href="https://github.com/ashlinhanson/dayPlanner" target="_blank">View the Code</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
   <div id="contact" class="py-5 m-5 mx-auto">
         <div>
@@ -174,7 +216,7 @@
           <br/>
           <div id="contactP" class="col-8 mx-auto">
             <p style="font-size: 20px;">I am a Front end web developer with a passion for creativity, problem solving, and growth. 
-            I Thrive within a team environment and enjoy collaborating to deliver the highest quality product possible. 
+            I thrive within a team environment and enjoy collaborating to deliver the highest quality product possible. 
             My past experience focuses on extensive customer service skills and strong leadership abilities. 
             These experiences produced many strengths such as creative and quick problem solving, strong communication, effective multitasking abilities, and leadership skills.
             </p>
