added overflow for mobile

--- a/index.html
+++ b/index.html
@@ -165,41 +165,41 @@
       </a>
     </div>
   </div>
-  <div class="d-block d-sm-none container" id="indexCont">
-    <div class="row" id="portfolioCards">
-      <div class="card m-2 p-2">
-        <img src="assets/Media/parks_n_req.png" class="card-img-top" alt="Parks_n_Req" style="height: 150px; width: 250px;">
+  <div class="d-block d-sm-none container mx-auto" id="indexCont">
+    <div class="d-flex flex-row flex-nowrap" id="portfolioCards">
+      <div class="card p-2">
+        <img src="assets/Media/parks_n_req.png" class="card-img-top mx-auto" alt="Parks_n_Req" style="height: 150px; width: 250px;">
         <div class="card-body">
           <h5 class="card-title"><strong>Parks_n_Req</strong></h5>
-          <p class="card-text">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected park.</p>
+          <p class="card-text px-4">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected park.</p>
           <button class="btn" href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank">View the Page</button>
           <button class="btn" href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank">View the Code</button>
         </div>
       </div>
-      <div class="card m-2 p-2">
-        <img src="assets/Media/inBloom.png" class="card-img-top" alt="inBloom" style="height: 150px; width: 250px;">
+      <div class="card p-2">
+        <img src="assets/Media/inBloom.png" class="card-img-top mx-auto" alt="inBloom" style="height: 150px; width: 250px;">
         <div class="card-body">
           <h5 class="card-title"><strong>inBloom</strong></h5>
-          <p class="card-text">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
+          <p class="card-text px-4">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
           <button class="btn" href="https://in-bloom.herokuapp.com/" target="_blank">View the Page</button>
           <button class="btn" href="https://github.com/ashlinhanson/inBloom" target="_blank">View the Code</button>
         </div>
       </div>
-      <div class="card m-2 p-2">
-        <img src="assets/Media/code-quiz.png" class="card-img-top" alt="Code Quiz" style="height: 150px; width: 250px;">
+      <div class="card p-2">
+        <img src="assets/Media/code-quiz.png" class="card-img-top mx-auto" alt="Code Quiz" style="height: 150px; width: 250px;">
         <div class="card-body">
           <h5 class="card-title"><strong>Code Quiz</strong></h5>
-          <p class="card-text">This web application is a quiz designed to test the user on
+          <p class="card-text px-4">This web application is a quiz designed to test the user on
             their knowledge of JavaScript.</p>
           <button class="btn" href="https://ashlinhanson.github.io/codeQuiz/" target="_blank">View the Page</button>
           <button class="btn" href="https://github.com/ashlinhanson/codeQuiz" target="_blank">View the Code</button>
         </div>
       </div>
-      <div class="card m-2 p-2">
-        <img src="assets/Media/weekday.png" class="card-img-top" alt="Day Planner" style="height: 150px; width: 250px;">
+      <div class="card p-2">
+        <img src="assets/Media/weekday.png" class="card-img-top mx-auto" alt="Day Planner" style="height: 150px; width: 250px;">
         <div class="card-body">
           <h5 class="card-title"><strong>Day Planner</strong></h5>
-          <p class="card-text">This web application is designed to help the user organize
+          <p class="card-text px-4">This web application is designed to help the user organize
             their workday by the hour.</p>
           <button class="btn" href="https://ashlinhanson.github.io/dayPlanner/" target="_blank">View the Page</button>
           <button class="btn" href="https://github.com/ashlinhanson/dayPlanner" target="_blank">View the Code</button>
