added arrow indicator for mobile

--- a/index.html
+++ b/index.html
@@ -206,7 +206,13 @@
         </div>
       </div>
     </div>
-  </div>
+    <div class="wrapper p-2 m-2">
+      <div class="arrow folio-arrow">
+        <div class="arrow-head"></div>
+        <div class="arrow-body"></div>
+      </div> 
+    </div>
+  </div> 
 </div>
   <div id="contact" class="py-5 m-5 mx-auto">
         <div>
