--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         </div>
       </div>
     </div>
+    <h6 class="p-2 m-2">swipe left to view more</h6>
   </div> 
 </div>
   <div id="contact" class="py-5 m-5 mx-auto">
