--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
           <div class="carousel-caption d-md-block">
             <h3 style="color: black"><strong>Parks_n_Req</strong></h3>
             <p style="color:black; height: 50px;">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected park.</p>
-            <button class="btn" href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank">View the Code</button>
-            <button class="btn" href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank">View the Page</button>
+            <a class="btn" href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank">View the Code</a>
+            <a class="btn" href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank">View the Page</a>
           </div>
         </div>
         <div class="carousel-item">
@@ -131,8 +131,8 @@
           <div class="carousel-caption d-md-block">
             <h3 style="color:black"><strong>inBloom</strong></h3>
             <p style="color:black; height: 50px;">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
-            <button class="btn" href="https://github.com/ashlinhanson/inBloom" target="_blank">View the Code</button>
-            <button class="btn" href="https://in-bloom.herokuapp.com/" target="_blank">View the Page</button>
+            <a class="btn" href="https://github.com/ashlinhanson/inBloom" target="_blank">View the Code</a>
+            <a class="btn" href="https://in-bloom.herokuapp.com/" target="_blank">View the Page</a>
           </div>
         </div>
         <div class="carousel-item">
@@ -141,8 +141,8 @@
             <h3 style="color:black"><strong>Code Quiz</strong></h3>
             <p style="color:black; height: 50px;">This web application is a quiz designed to test the user on
               their knowledge of JavaScript.</p>
-              <button class="btn" href="https://github.com/ashlinhanson/codeQuiz" target="_blank">View the Code</button>
-              <button class="btn" href="https://ashlinhanson.github.io/codeQuiz/" target="_blank">View the Page</button>
+              <a class="btn" href="https://github.com/ashlinhanson/codeQuiz" target="_blank">View the Code</a>
+              <a class="btn" href="https://ashlinhanson.github.io/codeQuiz/" target="_blank">View the Page</a>
           </div>
         </div>
         <div class="carousel-item">
@@ -151,15 +151,15 @@
             <h3 style="color:black"><strong>Week Day Planner</strong></h3>
             <p style="color:black; height: 50px;">This web application is designed to help the user organize
               their workday by the hour.</p>
-            <button class="btn" href="https://github.com/ashlinhanson/dayPlanner" target="_blank">View the Code</button>
-            <button class="btn" href="https://ashlinhanson.github.io/dayPlanner/" target="_blank">View the Page</button>
+            <a class="btn" href="https://github.com/ashlinhanson/dayPlanner" target="_blank">View the Code</a>
+            <a class="btn" href="https://ashlinhanson.github.io/dayPlanner/" target="_blank">View the Page</a>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="a" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselExampleControls" role="a" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -172,8 +172,8 @@
         <div class="card-body">
           <h5 class="card-title"><strong>Parks_n_Req</strong></h5>
           <p class="card-text px-4">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected park.</p>
-          <button class="btn" href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank">View the Page</button>
-          <button class="btn" href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank">View the Code</button>
+          <a class="btn" href="https://salty-hamlet-73070.herokuapp.com/home.html" target="_blank">View the Page</a>
+          <a class="btn" href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank">View the Code</a>
         </div>
       </div>
       <div class="card p-2">
@@ -181,8 +181,8 @@
         <div class="card-body">
           <h5 class="card-title"><strong>inBloom</strong></h5>
           <p class="card-text px-4">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
-          <button class="btn" href="https://in-bloom.herokuapp.com/" target="_blank">View the Page</button>
-          <button class="btn" href="https://github.com/ashlinhanson/inBloom" target="_blank">View the Code</button>
+          <a class="btn" href="https://in-bloom.herokuapp.com/" target="_blank">View the Page</a>
+          <a class="btn" href="https://github.com/ashlinhanson/inBloom" target="_blank">View the Code</a>
         </div>
       </div>
       <div class="card p-2">
@@ -191,8 +191,8 @@
           <h5 class="card-title"><strong>Code Quiz</strong></h5>
           <p class="card-text px-4">This web application is a quiz designed to test the user on
             their knowledge of JavaScript.</p>
-          <button class="btn" href="https://ashlinhanson.github.io/codeQuiz/" target="_blank">View the Page</button>
-          <button class="btn" href="https://github.com/ashlinhanson/codeQuiz" target="_blank">View the Code</button>
+          <a class="btn" href="https://ashlinhanson.github.io/codeQuiz/" target="_blank">View the Page</a>
+          <a class="btn" href="https://github.com/ashlinhanson/codeQuiz" target="_blank">View the Code</a>
         </div>
       </div>
       <div class="card p-2">
@@ -201,8 +201,8 @@
           <h5 class="card-title"><strong>Day Planner</strong></h5>
           <p class="card-text px-4">This web application is designed to help the user organize
             their workday by the hour.</p>
-          <button class="btn" href="https://ashlinhanson.github.io/dayPlanner/" target="_blank">View the Page</button>
-          <button class="btn" href="https://github.com/ashlinhanson/dayPlanner" target="_blank">View the Code</button>
+          <a class="btn" href="https://ashlinhanson.github.io/dayPlanner/" target="_blank">View the Page</a>
+          <a class="btn" href="https://github.com/ashlinhanson/dayPlanner" target="_blank">View the Code</a>
         </div>
       </div>
     </div>
