--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <p class="px-5" id="openingHead"><b>I'm Ashli Hanson</b></p>
       <p class="px-5" id="openingText">and I love creating things.</p>
       <p><a class="px-5" href="#contact" style="font-size: 24px; color:black;">Let's connect</a></p>
-      <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fab fa-instagram icon pl-5"></a>
-      <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fab fa-linkedin icon pl-5"></a>
-      <a href="https://github.com/ashlinhanson" target="_blank" class="fab fa-github icon pl-5"></a>
+      <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fab fa-instagram icon ml-5"></a>
+      <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fab fa-linkedin icon ml-5"></a>
+      <a href="https://github.com/ashlinhanson" target="_blank" class="fab fa-github icon ml-5"></a>
       <div class="container">
         <a data-scroll href="#full">
           <div class="arrow"></div>
