--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div id="carouselExampleControls" class="carousel slide col-8 mx-auto d-none d-sm-block" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req">
+          <img class="w-100 folioPhotos" src="assets/Media/parks_n_req.png" alt="Parks n Req">
           <div class="carousel-caption d-md-block">
             <h3 style="color: black"><strong>Parks_n_Req</strong></h3>
             <p style="color:black; height: 50px;">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected park.</p>
@@ -127,7 +127,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/inBloom.png" alt="inBloom">
+          <img class="w-100 folioPhotos" src="assets/Media/inBloom.png" alt="inBloom">
           <div class="carousel-caption d-md-block">
             <h3 style="color:black"><strong>inBloom</strong></h3>
             <p style="color:black; height: 50px;">A web application utilizing the MERN stack allowing the user a platform to easily track their care instructions for their plants.</p>
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/code-quiz.png" alt="Code Quiz">
+          <img class="w-100 folioPhotos" src="assets/Media/code-quiz.png" alt="Code Quiz">
           <div class="carousel-caption d-md-block">
             <h3 style="color:black"><strong>Code Quiz</strong></h3>
             <p style="color:black; height: 50px;">This web application is a quiz designed to test the user on
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="w-100" src="assets/Media/weekday.png" alt="Weekly Planner">
+          <img class="w-100 folioPhotos" src="assets/Media/weekday.png" alt="Weekly Planner">
           <div class="carousel-caption d-md-block">
             <h3 style="color:black"><strong>Week Day Planner</strong></h3>
             <p style="color:black; height: 50px;">This web application is designed to help the user organize
